@@ -15,4 +15,5 @@ SETUP_CHECK( divide_late, settings_current.divide_enabled )
 SETUP_CHECK( opus, opus_available )
 SETUP_CHECK( spectranet_unpage, spectranet_available )
 SETUP_CHECK( z80_halted, z80.halted )
+SETUP_CHECK( z80_iff2_read, z80.iff2_read )
 SETUP_NEXT( end_opcode )
