@@ -85,6 +85,8 @@
 
 #define IR ( ( z80.i ) << 8 | ( z80.r7 & 0x80 ) | ( z80.r & 0x7f ) )
 
+#define IS_CMOS settings_current.z80_is_cmos
+
 /* The flags */
 
 #define FLAG_C	0x01
